# cuda-codes

./: CMakeLists.txt  README.md
Sgemm/: CMakeLists.txt  main.cu  sgemm_v0_global_memory.cu  sgemm_v0_global_memory.cuh  sgemm_v1_shared_memory.cu  sgemm_v1_shared_memory.cuh  sgemm_v2_thread_coarsening.cu  sgemm_v2_thread_coarsening.cuh  sgemm_v3_using_float4.cu  sgemm_v3_using_float4.cuh  sgemm_v4_register_outer_product.cuh  sgemm_v5_register_and_float4.cuh  sgemm_v6_A_smem_transpose.cuh
cutlass_study/: CMakeLists.txt  v1_print_half.cu
ncuTest/: CMakeLists.txt  combined_access.cu
reduce/: CMakeLists.txt  main.cu  reduce_v0_global_memory.cu  reduce_v0_global_memory.cuh  reduce_v1_shared_memory.cu  reduce_v1_shared_memory.cuh  reduce_v2_no_divergence_branch.cu  reduce_v2_no_divergence_branch.cuh  reduce_v3_no_bank_conflict.cu  reduce_v3_no_bank_conflict.cuh  reduce_v4_thread_coarsening_A.cu  reduce_v4_thread_coarsening_A.cuh  reduce_v4_thread_coarsening_B.cu  reduce_v4_thread_coarsening_B.cuh  reduce_v5_unroll_last_warp.cu  reduce_v5_unroll_last_warp.cuh  reduce_v6_completely_unroll.cu  reduce_v6_completely_unroll.cuh  reduce_v7_multi_add.cu  reduce_v7_multi_add.cuh  reduce_v8_warp_shuffle.cu  reduce_v8_warp_shuffle.cuh
transpose/: CMakeLists.txt  main.cu  transpose_v0_naive.cuh
